feat: 학식 단품 메뉴 크롤링 복구, 공지사항·가격표 API 추가
학교 식단 페이지가 "별미 메뉴" 행을 "단품 메뉴"로 바꿔 SPECIAL 메뉴가
항상 비어 있던 것을 두 라벨 모두 받도록 수정한다. 페이지의 공지사항 행을
meal_notice 테이블에 주 단위로 저장해 GET /meal/current 의 notice 로
내려주고, 페이지에 없는 식권·단품 가격표는 application.yml 의 meal.prices
로 관리해 GET /meal/prices 로 내려준다.

Claude-Session: https://claude.ai/code/session_01SNjYTAouavYZE7pJRiNYYt